# valhalla-capital

./: .gitignore  README.md
data/: SHA256SUMS.bundle-original
data/csv/: overseer_capability_wishes.csv  overseer_cash_flows.csv  overseer_cycle_logs.csv  overseer_decision_journal.csv  overseer_episodic_memory.csv  overseer_knowledge_base.csv  overseer_learned_principles.csv  overseer_portfolio_daily.csv  overseer_system_config.csv  overseer_thesis_tracker.csv  overseer_trade_counters.csv  overseer_trades.csv  overseer_working_memory.csv  trading_claude_decisions.csv  (+3 more)
docs/: DATA_DICTIONARY.md
meta/: backup.sh  config_key_inventory.txt  container_inventory.txt  docker_images.txt  secrets_inventory.txt
services/: docker-compose.yml
services/fmp/FMP-Access-Library/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DOCKER.md  Dockerfile  QUICKSTART.md  README.md  REST_API.md  docker-compose.yml  example_basic.py  pyproject.toml  pytest.ini  requirements.txt  run_server.py
services/fmp/FMP-Access-Library/docker/mysql/: init.sql
services/fmp/FMP-Access-Library/examples/: api_client_example.py  comprehensive_analysis.py
services/fmp/FMP-Access-Library/fmp_data_client/: __init__.py  client.py  config.py
services/fmp/FMP-Access-Library/fmp_data_client/analysis/: __init__.py
services/fmp/FMP-Access-Library/fmp_data_client/cache/: __init__.py  mysql.py  schema.sql  ttl.py
services/fmp/FMP-Access-Library/fmp_data_client/cli/: __init__.py  main.py
services/fmp/FMP-Access-Library/fmp_data_client/fetcher/: __init__.py  base.py  endpoints.py  specialized.py  tier.py
services/fmp/FMP-Access-Library/fmp_data_client/models/: __init__.py  analyst.py  base.py  events.py  filings.py  fundamentals.py  news.py  ownership.py  profile.py  quote.py  request.py  ticker_data.py  transcripts.py  valuation.py
services/fmp/FMP-Access-Library/fmp_data_client/server/: __init__.py  api.py  auth.py  models.py
services/fmp/FMP-Access-Library/fmp_data_client/summarizer/: __init__.py  base.py  filings.py  transcripts.py
services/fmp/FMP-Access-Library/tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_client.py  test_config.py  test_fetcher.py  test_models.py  test_rest_api.py  test_summarizer.py
services/fmp/FMP-Access-Library/tests/fixtures/: __init__.py  mock_responses.py
services/ibkr/ibkr-trading-gateway/: .env.example  .gitignore  Dockerfile  IBKR_TRADING_IMPLEMENTATION_SPEC.md  README.md  docker-compose.yml  ibkr-watchdog.sh  pyproject.toml
services/ibkr/ibkr-trading-gateway/config/: settings.py
services/ibkr/ibkr-trading-gateway/migrations/: env.py
services/ibkr/ibkr-trading-gateway/migrations/versions/: 20260130_0001_initial_schema.py
services/ibkr/ibkr-trading-gateway/scripts/: health_check.py  init_db.py  manual_panic_reset.py
services/ibkr/ibkr-trading-gateway/src/: main.py
services/ibkr/ibkr-trading-gateway/src/adapters/: database.py  discord_notifier.py  file_io.py  ibkr_connection.py
services/ibkr/ibkr-trading-gateway/src/models/: portfolio_state.py  trade_request.py  trade_result.py
services/ibkr/ibkr-trading-gateway/src/models/db/: base.py  claude_decision.py  portfolio_snapshot.py  risk_check.py  trade.py
services/ibkr/ibkr-trading-gateway/src/services/: emergency_controller.py  file_watcher.py  kelly_calculator.py  order_executor.py  portfolio_tracker.py  request_processor.py  risk_validator.py  risk_validator.py.bak-20260421-175830
services/ibkr/ibkr-trading-gateway/src/utils/: logging.py  time_utils.py
services/ibkr/ibkr-trading-gateway/tests/: conftest.py
services/ibkr/ibkr-trading-gateway/tests/unit/: test_kelly_calculator.py  test_risk_validator.py  test_time_utils.py
services/ibkr/ibkr-trading-gateway/tests/unit/models/: test_trade_request.py  test_trade_result.py
services/overseer-app/: Dockerfile  pyproject.toml
services/overseer-app/src/overseer/: config.py  main.py
services/overseer-app/src/overseer/core/: agent_loop.py  context_builder.py  cycle_runner.py  drought.py  openrouter_client.py  replay_data_synthesis.json  replay_deep_analysis.json  replay_weekly_review.json  scheduler.py  test_harness.py  tool_registry.py
services/overseer-app/src/overseer/memory/: embeddings.py  episodic.py  knowledge_base.py  principles.py  working.py
services/overseer-app/src/overseer/models/: cycle.py  memory.py  tools.py  trading.py
services/overseer-app/src/overseer/tools/: data_feeds.py  discord_tools.py  fmp_client.py  ibkr_client.py  portfolio.py  research_worker.py  spending.py  system_tools.py  thesis.py  trading.py
services/overseer-app/src/overseer/utils/: admin_api.py  database.py  logging.py  market_hours.py  ssh.py
(+292 files in other folders)
