[project]
name = "valkyrie-overseer"
version = "0.1.0"
description = "Autonomous AI-driven value investing overseer"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "discord.py>=2.3",
    "structlog>=24.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
