[tool.poetry]
name = "ibkr-trading-gateway"
version = "0.1.0"
description = "IBKR Trading Execution Layer with Half-Kelly Position Sizing"
authors = ["Evangeline"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ib-insync = "^0.9.86"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
watchdog = "^3.0.0"
structlog = "^24.1.0"
httpx = "^0.26.0"
pytz = "^2024.1"
tzdata = "^2025.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
pytest-postgresql = "^5.0.0"
black = "^23.12.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
